--- a/src/components/extra/extra.css
+++ b/src/components/extra/extra.css
@@ -4,9 +4,10 @@
 }
 
 .extra__image {
-    overflow: hidden;
+    overflow: scroll;
     border-radius: 10px;
     margin: 0 auto 1rem;
+    max-height: 250px;
 }
 
 .extra__card {
@@ -14,6 +15,7 @@
     text-align: center;
     padding: 1rem;
     border-radius: 1rem;
+    max-height: 500px;
 }
 
 .extra__description {
